# keyhit-soundplayer

./: .gitignore  README.md  config.toml  pyproject.toml
src/keyhit_soundplayer/: __init__.py  cli.py  config.py  listeners.py  logging_config.py  player.py
