[project]
name = "keyhit-soundplayer"
version = "0.1.0"
description = "Low-latency global key hit sound player"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pygame>=2.6.1",
    "pynput>=1.8.2",
    "inputs>=0.5",
    "typer>=0.26.7",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]

[project.scripts]
keyhit-soundplayer = "keyhit_soundplayer.cli:main"

[tool.uv]
package = true
